examples/8.ingress-ha/1.app-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
#  namespace: ingress-controller
  labels:
    run: http-test-svc

spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
#  namespace: ingress-controller
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
